# PathGen2

./: CMakeCache.txt  CMakeLists.txt
applications/: CMakeLists.txt
applications/imu_gen/: CMakeLists.txt  imu_gen.cpp
applications/visualizer/: CMakeLists.txt  visualizer.cpp
include/pathgen/: EulerSpline.h  IMUGenerator.h  Measurements.h  PathGen.h.in  PathGenerator.h  PoseSpline.h  QuaternionAddons.h  QuaternionSpline.h  Types.h  Utils.h
src/: IMUGenerator.cpp  PathGenerator.cpp  QuaternionSpline.cpp  Utils.cpp
tests/: CMakeLists.txt  wraparound_test.cpp
